src/objects/Topics_of_Interest__c.object
<CustomObject>
    <description>IQVIAPSA-MC-3193 - For each product, tracking of topic of interest requiring regular monitoring during SD, PBRER, RMP, other routine PV activities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3193</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Topic_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Reminder_Calendar__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Date Reminder Calendar</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stopped__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Date Stopped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link_1__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Document Link</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Name_1__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_RMP__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Is Topic in RMP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <description>IQVIAPSA-3572</description>
        <label>Internal Comments</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>IQVIAPSA-3572</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedDRA_Search_Specifications__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>MedDRA Search Specifications</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Search_Variable_in_Data_Source__c</fullName>
        <description>IQVIAPSA-MC-3188</description>
        <inlineHelpText>Other Search Variable in Data Source (Specify)</inlineHelpText>
        <label>Other Search Variable in Data Source</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Topic_Category__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Other Topic Category (Specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_Additional_RMM__c</fullName>
        <inlineHelpText>Part of Additional Risk Minimization Measure?</inlineHelpText>
        <label>Is Topic part of aRMM?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_of_Commitment_to_HA__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <inlineHelpText>Part of Commitment to Health Authorities?</inlineHelpText>
        <label>Part of Commitment to HA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (see Rationale Started)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-3572</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Target__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Topics of Interest</relationshipLabel>
        <relationshipName>Topics_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-MC-3188</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Topic_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rationale_Started__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Rationale Started</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rationale_Stopped__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Rationale Stopped</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Variable_in_Data_Source__c</fullName>
        <description>IQVIAPSA-3572</description>
        <label>Search Variable in Data Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Events</fullName>
                </value>
                <value>
                    <fullName>Age Groups</fullName>
                </value>
                <value>
                    <fullName>Medical History</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Indication Related</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOI_Unique_ID__c</fullName>
        <description>IQVIAPSA-MC-4386</description>
        <label>TOI Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Topic_Category__c</fullName>
        <label>Topic Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Risk (not important)</fullName>
                </value>
                <value>
                    <fullName>Potential Risk (important)</fullName>
                </value>
                <value>
                    <fullName>Identified Risk (not important)</fullName>
                </value>
                <value>
                    <fullName>Identified Risk (important)</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>HA Close Monitoring Event</fullName>
                </value>
                <value>
                    <fullName>Adverse Event of Special Interest</fullName>
                </value>
                <value>
                    <fullName>Designated Medical Events</fullName>
                </value>
                <value>
                    <fullName>Standard Topic</fullName>
                </value>
                <value>
                    <fullName>PRAC signal not considered a signal by the MAH</fullName>
                </value>
                <value>
                    <fullName>Partner Signal not considered a signal by the MAH</fullName>
                </value>
                <value>
                    <fullName>Keep under review by the MAH (routine PV)</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic_ID__c</fullName>
        <formula>HYPERLINK(&quot;/?sort=&quot;&amp; TOI_Unique_ID__c,&quot;&quot;) &amp; HYPERLINK(&quot;/lightning/r/Topics_of_Interest__c/&quot; &amp; Id &amp;&quot;/view&quot;, LEFT(TOI_Unique_ID__c,3)+RIGHT(TOI_Unique_ID__c,12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Term__c</fullName>
        <description>IQVIAPSA-MC-3193</description>
        <label>Topic Term</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_MedDRA_Query__c</fullName>
        <description>IQVIAPSA-3572</description>
        <label>Type of MedDRA Query</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1PT</fullName>
                </value>
                <value>
                    <fullName>Customized list of PTs</fullName>
                </value>
                <value>
                    <fullName>HLGT</fullName>
                </value>
                <value>
                    <fullName>HLT</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>SMQ (broad scope)</fullName>
                </value>
                <value>
                    <fullName>SMQ (narrow scope)</fullName>
                </value>
                <value>
                    <fullName>SMQ (narrow scope+algorithm)</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Topics of Interest</label>
    <nameField>
        <label>Topics of Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TOI_PSA_ProjectCompleted</fullName>
        <active>true</active>
        <description>IQVIAPSA-3327</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
ISNEW(),
ISPICKVAL(Project__r.pse__Stage__c,&apos;Completed&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot create a new Topic of Interest Record because the project is Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TOI_PSA_VR02_ProjectCompleted</fullName>
        <active>true</active>
        <description>IQVIAPSA-3327</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
NOT(ISNEW()),
ISPICKVAL(Project__r.pse__Stage__c,&apos;Completed&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot edit Topic of Interest Record because the project is Completed.</errorMessage>
    </validationRules>
</CustomObject>